# AFG

./: .gitignore  CMakeLists.txt  README.md  taint_config.json  user_config.json
examples/async-demo/: Cargo.toml
examples/async-demo/src/: lib.rs  main.rs
examples/async-mpsc/: Cargo.toml
examples/async-mpsc/src/: lib.rs  main.rs
examples/channel-test/: Cargo.toml  README.md  channel-test-manual.ll  taint_config.json
examples/channel-test/src/: main.rs
examples/demo/: Cargo.toml  demo-r68_llvm17.ll  demo-r68_llvm17_map.ll  taint_config.json
examples/demo/src/: main.rs
examples/tokio-demo/: Cargo.toml  taint_config.json
examples/tokio-demo/src/: main.rs
include/: CallGraph.h  ChannelSemantics.h  Flags.h  KCallsitePointerAnalysis.h  OriginPointerAnalysis.h  PointerAnalysis.h  Util.h
rust_monitor/: Cargo.toml  README.md
rust_monitor/src/: lib.rs  macros.rs  monitor.rs
src/: CallGraph.cpp  ChannelSemantics.cpp  Flags.cpp  KCallsitePointerAnalysis.cpp  OriginPointerAnalysis.cpp  PointerAnalysis.cpp  PointerAnalysisPass.cpp
tests/: CMakeLists.txt  README.md  run_tests.sh  test.cpp  test_framework.h
tests/channel/: channel_create_test.ll  channel_tests.cpp  constraints_test.ll  dataflow_test.ll  flow_test.ll  mangled_test.ll  recv_test.ll  send_test.ll  tokio_test.ll
tests/context/: context_test.ll  context_tests.cpp  depth_test.ll  func_ptr_test.ll  recursive_test.ll
tests/integration/: complex_test.ll  edge_cases.ll  integration_tests.cpp  performance_test.ll  rust_simulation.ll  taint_config.json
tests/pointer/: alloca_test.ll  basic_test.cpp  multi_ptr_test.ll  param_test.ll  pointer_tests.cpp  simple.ll  store_load_test.ll  vtable_test.ll
tests/taint/: context_taint_config.json  context_taint_test.ll  multi_taint_config.json  multi_taint_test.ll  origin_config.json  origin_test.ll  param_taint_config.json  param_taint_test.ll  propagation_config.json  propagation_test.ll  taint_config.json  taint_test.ll  taint_tests.cpp
